panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_unintialised_local_variables_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_unintialised_local_variables_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_unintialised_local_variables_in_main.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~2 `int` @0) ∅)
         (definition (b~3 `int` @4) (27 `int` @4))
         (definition (c~4 `int` @8) ∅)
         (return (b~3 `int` @4)))))

----- stderr -----
