panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_value_of_assign_to_dereferenced_ptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_value_of_assign_to_dereferenced_ptr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_value_of_assign_to_dereferenced_ptr.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~2 `int` @0) (42 `int` @0))
         (definition (p~3 `ptr<int>` @8)
            (addressof `ptr<int>` @8
               (x~2 `int` @0)))
         (return
            (assign `int` @16
               (deref `int` @16 (p~3 `ptr<int>` @8))
               (27 `int` @24))))))

----- stderr -----
