panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_variable_can_be_initialised_with_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_variable_can_be_initialised_with_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_variable_can_be_initialised_with_variable.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~2 `int` @0) (42 `int` @0))
         (definition (b~3 `int` @4) (a~2 `int` @0))
         (return (b~3 `int` @4)))))

----- stderr -----
